--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,9 @@
 		"react/jsx-indent": [2, "tab"],
 		"react/jsx-indent-props": [2, "tab"],
 		"no-tabs": 0,
-		"react/prefer-stateless-function": 0
+		"react/prefer-stateless-function": 0,
+		"no-underscore-dangle": 0,
+		"import/prefer-default-export": 0,
+		"no-console": 0
 	}
 }
