--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "material-ui": "^1.0.0-beta.35",
     "material-ui-icons": "^1.0.0-beta.35",
     "react": "^16.2.0",
+    "react-alert": "^3.1.3",
+    "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
