--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
 		"react/prefer-stateless-function": 0,
 		"no-underscore-dangle": 0,
 		"import/prefer-default-export": 0,
-		"no-console": 0
+		"no-console": 0,
+		"camelcase": 0
 	}
 }
